# EbacCursoPythonBackend

./: Dockerfile  TarefaAnimalPOO.py  TarefaCalculadora2.py  TarefaLivros.py  TarefaPokeLista.py  TarefaPokedex.py  Termos1.py  Termos10.py  Termos11.py  Termos12.py  Termos13.py  Termos14.py  Termos15.py  Termos16.py  Termos17.py  Termos18.py  Termos19.py  Termos2  Termos2.py  Termos20.py  Termos21.py  Termos22.py  Termos23.py  Termos24.py  Termos3  Termos3.py  Termos4.py  Termos5.py  Termos6.py  Termos7.py  Termos8.py  Termos9.py  app.py  aula10.py  aula11.py  aula12.py  aula13.py  aula14.py  aula15.py  aula16.py  (+48 more)
todasasaulas/: app.py
