[tool.poetry]
name = "todasasaulas"
version = "0.1.0"
description = ""
authors = ["Lucas"]
packages = [{ include = "todasasaulas" }]
readme = "README.md"



[tool.poetry.dependencies]
python = ">=3.14"
fastapi = {extras = ["standard"], version = ">=0.129.0,<0.130.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
